syntax = "proto3";

package calculator;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/penril0326/hello_grpc/calculator";

message CalculatorRequest {
    int64 a = 1;
    int64 b = 2;

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            required: ["a"]
        }
    };
}

message CalculatorResponse {
    // Optional
    int64 result = 1;
}

message DeleteTest {
    string id = 1;
}

service CalculatorService {
    rpc Sum (CalculatorRequest) returns (CalculatorResponse) {
        option (google.api.http) = {
            post: "/v1/sum"
            body: "*"
        };
    }

    rpc Deletetest (DeleteTest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/delete/{id}"
        };

        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
              key: "204"
              value: {
                description: "A successful response."
              }
            }
        };
    }
}